--- a/BodybuilderRPG/bodybuilderrpg.client/index.html
+++ b/BodybuilderRPG/bodybuilderrpg.client/index.html
@@ -13,6 +13,7 @@
     <title>Bodybuilder RPG</title>
   </head>
   <body>
+    <div id="background-blur"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
