game/game.html update

--- a/BodybuilderRPG/bodybuilderrpg.client/public/game/game.html
+++ b/BodybuilderRPG/bodybuilderrpg.client/public/game/game.html
@@ -1065,7 +1065,7 @@
       if (/Android|iPhone|iPod/i.test(navigator.userAgent)) {
         bodyElement.className = "scrollingDisabled";
         canvasElement.classList.add("animatedSizeTransitions");
-        outputContainerElement.hidden = true;
+        // outputContainerElement.hidden = true;
       }
 
       document.addEventListener("visibilitychange", (event) => {
