--- a/BodybuilderRPG/bodybuilderrpg.client/public/game/game.html
+++ b/BodybuilderRPG/bodybuilderrpg.client/public/game/game.html
@@ -639,7 +639,7 @@
             //text = text.replace(/</g, "&lt;");
             //text = text.replace(/>/g, "&gt;");
             //text = text.replace('\n', '<br>', 'g');
-            console.log(text);
+            // console.log(text);
             if (text === "Entering main loop.") {
               // It seems that this text ensures game is loaded.
               ensureAspectRatio();
